@@ -3,7 +3,9 @@ package at.ac.tuwien.sepm.groupphase.backend.datagenerator;
 import at.ac.tuwien.sepm.groupphase.backend.entity.*;
 import at.ac.tuwien.sepm.groupphase.backend.repository.*;
 import at.ac.tuwien.sepm.groupphase.backend.service.ArtistService;
+import at.ac.tuwien.sepm.groupphase.backend.service.CommissionService;
 import at.ac.tuwien.sepm.groupphase.backend.utils.ImageDataPaths;
+import at.ac.tuwien.sepm.groupphase.backend.utils.ImageFileManager;
 import at.ac.tuwien.sepm.groupphase.backend.utils.enums.CommissionStatus;
 import at.ac.tuwien.sepm.groupphase.backend.utils.enums.FileType;
 import at.ac.tuwien.sepm.groupphase.backend.utils.enums.UserRole;
@@ -15,17 +17,13 @@ import org.springframework.stereotype.Component;
 
 import javax.annotation.PostConstruct;
 import javax.net.ssl.HttpsURLConnection;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Slf4j
@@ -46,6 +44,7 @@ public class UserDataGenerator {
     private final ChatRepository chatRepository;
     private final ChatMessageRepository chatMessageRepository;
     private final CommissionRepository commissionRepository;
+    private final CommissionService commissionService;
     private String[] urls = new String[]{
         "https://i.ibb.co/HTT7Ym3/image0.jpg",
         "https://i.ibb.co/7yHp276/image1.jpg",
@@ -64,7 +63,7 @@ public class UserDataGenerator {
                              PasswordEncoder passwordEncoder,
                              ArtworkRepository artworkRepo,
                              TagRepository tagRepository,
-                             ChatRepository chatRepository, ChatMessageRepository chatMessageRepository, CommissionRepository commissionRepository) {
+                             ChatRepository chatRepository, ChatMessageRepository chatMessageRepository, CommissionRepository commissionRepository, CommissionService commissionService) {
         this.artistService = artistService;
         this.userRepository = userRepository;
         this.artistRepository = artistRepository;
@@ -74,6 +73,7 @@ public class UserDataGenerator {
         this.chatRepository = chatRepository;
         this.chatMessageRepository = chatMessageRepository;
         this.commissionRepository = commissionRepository;
+        this.commissionService = commissionService;
     }
 
     @PostConstruct
@@ -107,7 +107,7 @@ public class UserDataGenerator {
     private void generateChats() {
         List<ApplicationUser> users = this.userRepository.findAll();
 
-        ApplicationUser testUser = (ApplicationUser) users.stream().filter(a -> a.getUserName().toLowerCase().equals("testartist")).findAny().get();
+        ApplicationUser testUser = users.stream().filter(a -> a.getUserName().equalsIgnoreCase("testartist")).findAny().get();
         Faker f = new Faker();
         for (int i = 0; i < 5; i++) {
             Chat c = new Chat();
@@ -154,14 +154,11 @@ public class UserDataGenerator {
         log.info(ImageDataPaths.assetAbsoluteLocation + ImageDataPaths.artistProfileLocation);
         try (Stream<Path> walk = Files.walk(Paths.get(ImageDataPaths.assetAbsoluteLocation + ImageDataPaths.artistProfileLocation), 1)) {
 
-            List<String> result = walk.filter(Files::isDirectory).map(Path::toString).collect(Collectors.toList());
-            int limit = numberOfProfiles;
-            if (numberOfProfiles > result.size() - 1) {
-                limit = result.size() - 1;
-            }
+            List<String> result = walk.filter(Files::isDirectory).map(Path::toString).toList();
+            int limit = Math.min(numberOfProfiles, result.size() - 1);
             result.subList(1, limit).forEach(
                 folder -> {
-                    log.info(folder.toString());
+                    log.info(folder);
                     File fldr = new File(folder);
                     Artist a = generateArtistProfile(fldr.getName());
 
@@ -251,7 +248,7 @@ public class UserDataGenerator {
         return user;
     }
 
-    private void generateArtistTestAccount(String username, String password) throws IOException {
+    private void generateArtistTestAccount(String username, String password) {
         Artist artist = generateArtistProfile(username);
         artist.setEmail(username.toLowerCase() + "@test.com");
         artist.setPassword(passwordEncoder.encode(password));
@@ -273,15 +270,48 @@ public class UserDataGenerator {
         }
     }
 
-    private void generateTestCommissions() {
+    private void generateTestCommissions() throws IOException {
 
         List<ApplicationUser> users = userRepository.findAll();
         List<Artist> artists = artistService.getAllArtists();
+        ApplicationUser user = userRepository.findApplicationUserByEmail("testuser@test.com");
 
-        Commission c = generateCommission2(artists.get(0), users.get(0));
-        commissionRepository.save(c);
-        Commission d = generateCommission1(artists.get(1), users.get(1));
-        commissionRepository.save(d);
+        Commission c = generateCommission2(artists.get(0), user);
+        commissionService.saveCommission(c);
+        Commission d = generateCommission1(artists.get(1), user);
+        commissionService.saveCommission(d);
+        Commission e = generateCommission3(artists.get(0), user);
+        commissionService.saveCommission(e);
+        Commission f = generateCommission4(artists.get(0), user);
+        commissionService.saveCommission(f);
+        Artwork artwork = new Artwork();
+        artwork.setCommission(f);
+        artwork.setArtist(artists.get(0));
+        artwork.setFileType(FileType.JPG);
+        artwork.setDescription("Artwork description");
+        artwork.setName("Artwork");
+        artwork.setImageData(getImageBytes(urls[7]));
+        ImageFileManager ifm = new ImageFileManager();
+        String s = ifm.writeCommissionArtwork(f, artwork);
+        artwork.setImageUrl(s);
+        List<Sketch> sketches = new LinkedList<>();
+        for (int i = 4; i < 8; i++) {
+            Sketch k = new Sketch();
+            k.setDescription("Sketch " + i);
+            k.setFileType(FileType.JPG);
+            k.setImageData(getImageBytes(urls[i]));
+            k.setArtwork(artwork);
+            k.setCustomerFeedback("looks good, carry on :)");
+            String string = ifm.writeSketchImage(f, k);
+            k.setImageUrl(string);
+            sketches.add(k);
+        }
+        artwork.setSketches(sketches);
+        artworkRepo.save(artwork);
+        f.setArtwork(artwork);
+        Commission g = generateCommission5(artists.get(0), user);
+        commissionService.saveCommission(g);
+
 
         ApplicationUser user = userRepository.findApplicationUserByEmail("testuser@test.com");
         Artist artist = artistRepository.findApplicationUserByEmail("testartist@test.com");
@@ -305,18 +335,18 @@ public class UserDataGenerator {
         commission.setIssueDate(LocalDateTime.now());
         commission.setDeadlineDate(LocalDateTime.now().plusDays((int) (Math.random() * 100)));
         commission.setStatus(CommissionStatus.LISTED);
-        String desc = faker.shakespeare().hamletQuote().toString();
+        String desc = faker.shakespeare().hamletQuote();
         if (desc.length() > 50) {
             desc = desc.substring(0, 49);
         }
         commission.setInstructions(desc);
         Artwork a = new Artwork();
-        List<Sketch> sketches = new LinkedList<Sketch>();
+        List<Sketch> sketches = new LinkedList<>();
         for (int i = 4; i > 1; i--) {
             if (i == 4) {
                 a.setArtist(artist);
                 a.setName("Sample Commission Art");
-                a.setDescription(faker.harryPotter().quote().toString());
+                a.setDescription(faker.harryPotter().quote());
                 a.setImageUrl("data\\com\\adminSample Commission\\sketch" + i);
                 a.setFileType(FileType.JPG);
             } else {
@@ -334,8 +364,209 @@ public class UserDataGenerator {
         return commission;
     }
 
-    private Commission generateCommission2(Artist artist, ApplicationUser user) {
+    private Commission generateCommission2(Artist artist, ApplicationUser user) throws IOException {
 
+        Faker faker = new Faker();
+        Commission commission = new Commission();
+        commission.setStatus(CommissionStatus.IN_PROGRESS);
+        commission.setArtist(artist);
+        commission.setCustomer(user);
+        commission.setTitle("Sample Commission");
+        commission.setSketchesShown(2);
+        commission.setFeedbackSent(1);
+        commission.setPrice((int) (Math.random() * 10000));
+        commission.setFeedbackRounds(4);
+        commission.setIssueDate(LocalDateTime.now());
+        commission.setDeadlineDate(LocalDateTime.now().plusDays((int) (Math.random() * 100)));
+        commission.setStatus(CommissionStatus.IN_PROGRESS);
+        String desc = faker.shakespeare().hamletQuote();
+        if (desc.length() > 50) {
+            desc = desc.substring(0, 49);
+        }
+        commission.setInstructions(desc);
+
+        Artwork a = new Artwork();
+        List<Sketch> sketches = new LinkedList<>();
+        for (int i = 5; i > 1; i--) {
+            if (i == 4) {
+                a.setArtist(artist);
+                a.setName("Sample Commission Art");
+                desc = faker.shakespeare().hamletQuote();
+                if (desc.length() > 50) {
+                    desc = desc.substring(0, 49);
+                }
+                a.setDescription(desc);
+                a.setImageUrl("data\\com\\adminSample Commission2\\b" + i);
+                a.setFileType(FileType.JPG);
+            } else {
+                if (i % 2 != 0) {
+                    Sketch k = new Sketch();
+                    k.setFileType(FileType.JPG);
+                    k.setArtwork(a);
+                    k.setImageData(getImageBytes(urls[i]));
+                    k.setDescription("Sketch " + i);
+                    k.setImageUrl("data\\com\\adminSample Commission2\\b" + i);
+                    if (i == 3) {
+                        k.setCustomerFeedback("nice work " + i);
+                    }
+                    sketches.add(k);
+                }
+
+            }
+        }
+        Reference reference = new Reference();
+        reference.setImageUrl("data\\com\\adminSample Commission2\\bReference");
+        reference.setImageData(getImageBytes(urls[0]));
+        reference.setCommission(commission);
+        reference.setFileType(FileType.JPG);
+        List<Reference> references = new LinkedList<>();
+        references.add(reference);
+        a.setSketches(sketches);
+        commission.setReferences(references);
+        commission.setArtwork(a);
+        return commission;
+    }
+
+    private Commission generateCommission3(Artist artist, ApplicationUser user) throws IOException {
+
+        Faker faker = new Faker();
+        Commission commission = new Commission();
+        commission.setArtist(artist);
+        commission.setCustomer(user);
+        commission.setTitle("Sample Commission");
+        commission.setSketchesShown(4);
+        commission.setFeedbackSent(4);
+        commission.setPrice((int) (Math.random() * 10000));
+        commission.setFeedbackRounds(4);
+        commission.setIssueDate(LocalDateTime.now().minusDays((int) (Math.random() * 100)));
+        commission.setDeadlineDate(LocalDateTime.now());
+        commission.setStatus(CommissionStatus.COMPLETED);
+        String desc = faker.shakespeare().hamletQuote();
+        if (desc.length() > 50) {
+            desc = desc.substring(0, 49);
+        }
+        commission.setInstructions(desc);
+
+        Artwork a = new Artwork();
+        List<Sketch> sketches = new LinkedList<>();
+        ImageFileManager ifm = new ImageFileManager();
+        String assetAbsoluteLocation = Path.of("").toAbsolutePath().toString().replace("\\backend", "") + "\\frontend\\src\\assets\\";
+        ifm.createFolderIfNotExists(assetAbsoluteLocation + "data\\com\\adminSample Commission3\\");
+        for (int i = 5; i > 1; i--) {
+            if (i == 4) {
+                a.setArtist(artist);
+                a.setName("Sample Commission Art");
+                desc = faker.shakespeare().hamletQuote();
+                if (desc.length() > 50) {
+                    desc = desc.substring(0, 49);
+                }
+                a.setDescription(desc);
+                a.setImageUrl("data\\com\\adminSample Commission3\\b" + i);
+                a.setImageData(getImageBytes(urls[3]));
+                a.setFileType(FileType.JPG);
+            } else {
+                Sketch k = new Sketch();
+                k.setFileType(FileType.JPG);
+                k.setArtwork(a);
+                k.setImageData(getImageBytes(urls[i]));
+                k.setDescription("Sketch " + i);
+                k.setImageUrl("data\\com\\adminSample Commission3\\b" + i);
+                k.setCustomerFeedback("looks great " + i);
+                sketches.add(k);
+            }
+        }
+        Reference reference = new Reference();
+        reference.setImageUrl("data\\com\\adminSample Commission3\\bReference");
+        reference.setImageData(getImageBytes(urls[0]));
+        reference.setCommission(commission);
+        reference.setFileType(FileType.JPG);
+        List<Reference> references = new LinkedList<>();
+        references.add(reference);
+        Reference reference1 = new Reference();
+        reference1.setImageUrl("data\\com\\adminSample Commission3\\bReference1");
+        reference1.setImageData(getImageBytes(urls[1]));
+        reference1.setCommission(commission);
+        reference1.setFileType(FileType.JPG);
+        references.add(reference1);
+        a.setSketches(sketches);
+        ifm.writeReferenceDatagenImage(commission, reference, "data\\com\\adminSample Commission3\\bReference");
+        ifm.writeReferenceDatagenImage(commission, reference1, "data\\com\\adminSample Commission3\\bReference1");
+        commission.setReferences(references);
+        commission.setArtwork(a);
+        return commission;
+    }
+
+    private Commission generateCommission4(Artist artist, ApplicationUser user) throws IOException {
+
+        Faker faker = new Faker();
+        Commission commission = new Commission();
+        commission.setArtist(artist);
+        commission.setCustomer(user);
+        commission.setTitle("Sample Commission");
+        commission.setSketchesShown(4);
+        commission.setFeedbackSent(4);
+        commission.setPrice((int) (Math.random() * 10000));
+        commission.setFeedbackRounds(4);
+        commission.setIssueDate(LocalDateTime.now());
+        commission.setDeadlineDate(LocalDateTime.now().plusDays((int) (Math.random() * 100)));
+        commission.setStatus(CommissionStatus.COMPLETED);
+        String desc = faker.shakespeare().hamletQuote();
+        if (desc.length() > 50) {
+            desc = desc.substring(0, 49);
+        }
+        commission.setInstructions(desc);
+
+        Artwork a = new Artwork();
+        List<Sketch> sketches = new LinkedList<>();
+        ImageFileManager ifm = new ImageFileManager();
+        String assetAbsoluteLocation = Path.of("").toAbsolutePath().toString().replace("\\backend", "") + "\\frontend\\src\\assets\\";
+        ifm.createFolderIfNotExists(assetAbsoluteLocation + "data\\com\\adminSample Commission4\\");
+        for (int i = 5; i > 1; i--) {
+            if (i == 4) {
+                a.setArtist(artist);
+                a.setName("Sample Commission Art");
+                desc = faker.shakespeare().hamletQuote();
+                if (desc.length() > 50) {
+                    desc = desc.substring(0, 49);
+                }
+                a.setDescription(desc);
+                a.setImageUrl("data\\com\\adminSample Commission4\\b" + i);
+                a.setFileType(FileType.JPG);
+            } else {
+                Sketch k = new Sketch();
+                k.setFileType(FileType.JPG);
+                k.setArtwork(a);
+                k.setImageData(getImageBytes(urls[i + 3]));
+                k.setDescription("Sketch " + i);
+                k.setImageUrl("data\\com\\adminSample Commission4\\b" + i);
+                k.setCustomerFeedback("looks good " + i);
+                sketches.add(k);
+
+            }
+        }
+        Sketch k = new Sketch();
+        k.setFileType(FileType.GIF);
+        k.setArtwork(a);
+        k.setImageData(getImageBytes(urls[8]));
+        k.setDescription("Sketch GIF");
+        k.setImageUrl("data\\com\\adminSample Commission4\\bGIF");
+        sketches.add(k);
+        Reference reference = new Reference();
+        reference.setImageUrl("data\\com\\adminSample Commission4\\bReference");
+        reference.setImageData(getImageBytes(urls[1]));
+        reference.setCommission(commission);
+        reference.setFileType(FileType.JPG);
+        List<Reference> references = new LinkedList<>();
+        references.add(reference);
+        ifm.writeReferenceDatagenImage(commission, reference, "data\\com\\adminSample Commission4\\bReference");
+        a.setSketches(sketches);
+        commission.setArtistCandidates(null);
+        commission.setReferences(references);
+        commission.setArtwork(a);
+        return commission;
+    }
+
+    private Commission generateCommission5(Artist artist, ApplicationUser user) {
         Faker faker = new Faker();
         Commission commission = new Commission();
         commission.setStatus(CommissionStatus.IN_PROGRESS);
@@ -345,34 +576,31 @@ public class UserDataGenerator {
         commission.setSketchesShown(0);
         commission.setFeedbackSent(0);
         commission.setPrice((int) (Math.random() * 10000));
-        commission.setFeedbackRounds(4);
         commission.setIssueDate(LocalDateTime.now());
         commission.setDeadlineDate(LocalDateTime.now().plusDays((int) (Math.random() * 100)));
         commission.setStatus(CommissionStatus.LISTED);
-        String desc = faker.shakespeare().hamletQuote().toString();
+        String desc = faker.shakespeare().hamletQuote();
         if (desc.length() > 50) {
             desc = desc.substring(0, 49);
         }
+        List<Artist> artists = artistService.getAllArtists();
+        commission.setArtistCandidates(artists.subList(0, 5));
         commission.setInstructions(desc);
         Artwork a = new Artwork();
-        List<Sketch> sketches = new LinkedList<Sketch>();
-        for (int i = 5; i > 1; i--) {
+        List<Sketch> sketches = new LinkedList<>();
+        for (int i = 4; i > 1; i--) {
             if (i == 4) {
                 a.setArtist(artist);
                 a.setName("Sample Commission Art");
-                desc = faker.shakespeare().hamletQuote().toString();
-                if (desc.length() > 50) {
-                    desc = desc.substring(0, 49);
-                }
-                a.setDescription(desc);
-                a.setImageUrl("data\\com\\adminSample Commission2\\b" + i);
+                a.setDescription(faker.harryPotter().quote());
+                a.setImageUrl("data\\com\\adminSample Commission5\\sketch" + i);
                 a.setFileType(FileType.JPG);
             } else {
                 Sketch k = new Sketch();
+                k.setDescription("Sketch " + i);
                 k.setFileType(FileType.JPG);
                 k.setArtwork(a);
-                k.setDescription("Sketch " + i);
-                k.setImageUrl("data\\com\\adminSample Commission2\\b" + i);
+                k.setImageUrl("data\\com\\adminSample Commission5\\sketch" + i);
                 sketches.add(k);
 
             }
@@ -426,6 +654,26 @@ public class UserDataGenerator {
         a.setSketches(sketches);
         commission.setArtwork(a);
         return commission;
+    }
+
+    public static byte[] getImageBytes(String imageUrl) throws IOException {
+        URL url = new URL(imageUrl);
+
+        ByteArrayOutputStream output = new ByteArrayOutputStream();
+
+        try (InputStream stream = url.openStream()) {
+            byte[] buffer = new byte[4096];
+
+            while (true) {
+                int bytesRead = stream.read(buffer);
+                if (bytesRead < 0) {
+                    break;
+                }
+                output.write(buffer, 0, bytesRead);
+            }
+        }
+
+        return output.toByteArray();
     }
 
     //old approach not working, issues with cloudflare protection 403 error.
